# codex-runtime-bridge

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CONSUMER_CONTRACT.md  DEPLOYMENT.md  IMPLEMENTATION_MAP.md  ROADMAP.md
src/codex_runtime_bridge/: __init__.py  api.py  cli.py  http_client.py  rpc.py  schemas.py  service.py
src/codex_runtime_bridge/bridge/: __init__.py  attachments.py  consumer_events.py  events.py  service.py  translator.py  workspace.py
src/codex_runtime_bridge/bridge/commands/: __init__.py  parser.py  registry.py
src/codex_runtime_bridge/cli/: __init__.py  main.py  render.py
src/codex_runtime_bridge/http/: __init__.py  api.py  client.py  errors.py  schemas.py
src/codex_runtime_bridge/transport/: __init__.py  rpc.py
tests/: test_api.py  test_cli.py  test_http_client.py  test_service.py
